samples/_failures_safe/1761525521_2394b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_844380cd.c: In function ‘main’:
./samples/SAFE/__tmp_844380cd.c:166:5: error: expected expression at end of input
  166 |     if (
      |     ^~
./samples/SAFE/__tmp_844380cd.c:166:5: error: expected declaration or statement at end of input
